2005-08-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Document some methods, add is_locally_present.
	* Engine.pm: Revamp prefetching. Also make 'fink build' always build
	something unless there's a .deb presen that has been built by the local
	Fink.

2005-08-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Attempt to make prefetching work the way it should, someone
	who knows the dep engine should look at this.

2005-08-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Don't exit method with 'next'.
	* Services.pm, FinkVersion.pm.in: Remove RFC-822 from Info3, yay!

2005-08-25  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: check version-dep syntax in .info pkglist lines.

2005-08-24  Dave Morrison  <dmrrsn@users.sourceforge.net>

	*  VirtPackage.pm: Add note about XCode Legacy Compilers to
	description of gcc virtual packages

2005-08-23  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: New method to resolve the best version to install.
	* Engine.pm: Finish factoring out alternative-resolution code. Over 250
	lines are gone from real_install!

2005-08-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Move some more parts of alternative resolution into functions.

2005-08-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Use smaller scopes for variables, so code can be refactored
	without inadvertantly stomping on other code.

2005-08-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: New convenience method get_latest_version, document
	is_virtual.
	* Engine.pm: Move asking for an alternative into a function.

2005-08-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm, Engine.pm: Make fink do the right thing when multiple
	version specs are encountered. Note that bad things can still happen if
	Fink processes a package's dependencies before a new spec modifies the
	version we should be looking at.